[gd_scene load_steps=5 format=2]

[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/Door.png" type="Texture" id=1]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/Door.gd" type="Script" id=2]
[ext_resource path="res://audios/OnlineSeminar/doorOpen.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.0984, 55.1105 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )

[node name="DoorSprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.610231, 0.610231 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )
disabled = true

[node name="DoorOpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Door_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_Door_visibility_changed"]
